# downtime-monitor

./: .eslintrc.cjs  .gitignore  README.md  eslint.config.mjs  knexfile.js  nuxt.config.ts  ormconfig.json  package.json  pnpm-lock.yaml  quasar.conf.js  tailwind.config.js  tsconfig.json
docs/: downtime-design.fig  downtime-mon-wireframe.fig
playground/: Cargo.toml  dm.db
playground/src/: core.rs  db.rs  main.rs
playground/src/core/: schedule_manager.rs  services.rs  types.rs
rust-tests/: Cargo.toml
rust-tests/src/: main.rs
src/: App.vue  vue-data-ui-d.ts
src-electron/main-process/: electron-main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs  types.rs
src/assets/css/: main.css
src/assets/scss/: main.scss
src/components/: DrawerLink.vue  Sidebar.vue  StatusCard.vue  Titlebar.vue  mini-historam-options.ts
src/core/: App.ts  ExtensionManager.ts
src/core/smtp/: smtp-client.js
src/entity/: abstact.entity.ts  service.entity.ts
src/extensions/: ping.ext.ts  smtp.ts
src/helpers/: appUtils.js  db-mock.ts  dbUtils.js  monitorUtils.js
src/layouts/: MainLayout.vue  default.vue  temp.vue
src/models/: MonitorEntry.js  temp.js
src/pages/: Index.vue  Settings.vue  dashboard.vue  index.vue
src/router/: routes.js
src/store/: index.js
src/types/: index.ts  service-overview.type.ts  service-status.type.ts
src/types/api/: AppExtension.ts  ExtensibleApp.ts  Service.ts  ServiceIdentifier.ts  ServiceStatusChecker.ts  index.ts  service-status-verifier.ts  service-verification-result.ts
src/types/api/exceptions/: connection-string.excpetion.ts  service-connection.exception.ts
