[package]
name = "rust-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lettre = "0.11.7"
reqwest = "0.12.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
