[package]
name = "nettus-app"
version = "0.0.1"
description = "Nettus"
authors = ["Yemi Kudaisi"]
license = ""
repository = "https://github.com/yemikudaisi/downtime-monitor"
default-run = "nettus-app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = [ "api-all"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
window-vibrancy = "0.4.0"
chrono = "0.4.38"
dotenv = "0.15.0"
lettre = "0.11.7"
reqwest = "0.12.4"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.10.2", default-features = false }
uuid = "1.8.0"